logs.txt
   Compiling tcss360-project v0.1.0 (/home/knguyen/src/rust/tcss360-project/tcss360-project)
error[E0425]: cannot find value `rng` in this scope
   --> src/sky.rs:288:29
    |
288 | ...                   rng.0.random_range(0..SKY_TILE_VARIENT_COUNT)
    |                       ^^^ not found in this scope
    |
help: consider importing this function
    |
2   + use rand::rng;
    |

error[E0599]: no method named `remove` found for struct `bevy::prelude::Query` in the current scope
   --> src/sky.rs:280:18
    |
280 |     tile_storage.remove(&tile_pos); 
    |                  ^^^^^^ method not found in `Query<'_, '_, &mut TileStorage>`

error[E0599]: no method named `set` found for struct `bevy::prelude::Query` in the current scope
    --> src/sky.rs:294:18
     |
294  |     tile_storage.set(&tile_pos, id);
     |                  ^^^
     |
help: there is a method `get` with a similar name, but with different arguments
    --> /home/knguyen/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bevy_ecs-0.16.1/src/system/query.rs:1385:5
     |
1385 |     pub fn get(&self, entity: Entity) -> Result<ROQueryItem<'_, D>, QueryEntityError> {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `tcss360-project` (bin "tcss360-project") due to 3 previous errors
